--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,19 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.0"
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
 }
 
 repositories {
-    mavenLocal()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib"
-    compile "org.jetbrains.kotlin:kotlin-script-runtime"
-    compile "com.xenomachina:kotlin-argparser:2.0.7"
-    compile "com.github.holgerbrandl:kscript-annotations:1.2"
-    
-    testCompile "junit:junit:4.12"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
+    implementation 'org.jetbrains.kotlin:kotlin-script-runtime:1.5.31'
+    implementation 'com.github.holgerbrandl:kscript-annotations:1.4'
+
+    implementation 'com.github.ajalt.clikt:clikt:3.3.0'
+
+    testImplementation 'junit:junit:4.13.2'
 }
 
 sourceSets.main.java.srcDirs 'src/main/kotlin'
